--- a/Tales/template/template.html
+++ b/Tales/template/template.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El conejito aguacate</title>
+    <title>Template</title>
     <link rel="stylesheet" href="C:\Users\elian\git-start\CuentosQueNoLoSon\Tales\conejito-feliz\conejito-aguacate.css">
 </head>
 <body>
@@ -25,25 +25,7 @@
 
                 </div>
                 <div class="page">
-                    <h1>
-                        El conejito aguacate que solo quería ser feliz contigo
-                    </h1>
-                    <p>
-                        El pequeño conejito
-                        solo se encontraba.
-                    </p>
-                    <p>
-                        Vio cuando llegaste 
-                        que mucho amor
-                        le dabas.
-                    </p>
-                    ¿Puedo ser feliz contigo?
-                    <p>
-                        Preguntó curioso.
-                    </p>
-                    <p>
-                        Y tú callaste. Shhh.
-                    </p>
+
                 </div>
             </div>        
         </div>
